--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">First App</string>
+    <string name="app_logo">Smart Convertor</string>
+    <string name="editTextHint">Input speed</string>
+    <string name="btnName">Convert</string>
 </resources>
